2002-10-09  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication (hide:): Don't setinputfocus to the
	icon window.
	* Source/NSWindow.m (-sendEvent:) (GSAppKitWindowFocusIn): 
	If we're not visible, don't try to become main/key.

2002-10-08  Adam Fedor  <fedor@gnu.org>

	* Fix window focus problems.
	* Source/NSApplication.m ([NSIconWindow -canBecomeKeyWindow]): 
	return YES.
	(-finishLaunching): Don't make main menu key.
	([NSApplication -deactivate]): Don't setinputfocus to the
	icon window.

	* Add Quartz-like interface and overridable passing of
	colorspaces and fonts to backend.
	* Headers/gnustep/gui/NSFont.h (_fontRef): New ivar.
	* Source/NSFont (-fontRef): New method.
	(GSSetFont): Use it.
	* Source/GSFontInfo (-matrix): New method.
	* Headers/gnustep/gui/GSFusedSilica.h: New header
	* Headers/gnustep/gui/GSFusedSilicaContext.h: Idem.
	* GSFusedSilica.m: New file.
	* GSFusedSilicaContext.m: Idem.

Tue Oct  8 19:15:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSSecureTextField.m: Mostly rewritten.  Main changes -
	NSCoding protocol methods moved to the cell; implemented encoding;
	do not share the secure text field globally, just create one each
	time; create the secure text field in setupFieldEditorAttributes:
	and removed most other hacks.  Init methods of the secure text
	view rewritten to be simpler.  Do not register the secure text
	view for services.  Should no longer crash with the new internals.
	* Headers/gnustep/gui/NSSecureTextField.h: Prefix ivars with
	underscore.  Add setEchosBullets: and echosBullets methods to 
	the textfield as well as the cell.
	
Tue Oct  8 18:46:45 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSTextContainer.m ([-replaceLayoutManager:]): Retain the
	layout manager, then release it at the end; refresh the layout
	manager cached by the textview; do not set the layout manager's
	text storage manually.
	* Source/NSTextStorage.m ([-removeLayoutManager:]): Set the