@@ -1,3 +1,8 @@
+2002-08-30  Georg Fleischmann
+	
+	* Source/NSWindow.m ([-constrainFrameRect]): Move window inside
+	  screen, if window top is below screen.
+
 2002-10-09  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSApplication (hide:): Don't setinputfocus to the
